# trust

./: Cargo.toml
src/: main.rs
src/config/: database.rs
src/controllers/: user_controller.rs
src/models/: user.rs
src/routes/: mod.rs
src/services/: user_service.rs
