[package]
name = "trust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
bcrypt = "0.16.0"
chrono = "0.4.38"
dotenv = "0.15.0"
futures-util = "0.3.31"
jsonwebtoken = "9.3.0"
lettre = "0.11.10"
mongodb = { version = "3.1.0", features = ["sync"] }
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
